--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest",
+    "test": "ts-node --files ./node_modules/jest/bin/jest",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts"
   },
@@ -29,10 +29,13 @@
   },
   "homepage": "https://github.com/diyfr/quickdom#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "eslint": "^9.5.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.2",
     "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
