--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quickdom",
+  "name": "@diyfr/quickdom",
   "version": "0.9.0",
   "description": "A lightweight library for creating and manipulating DOM elements.",
   "main": "dist/index.js",
@@ -7,12 +7,11 @@
   "scripts": {
     "build": "tsc",
     "test": "ts-node --files ./node_modules/jest/bin/jest",
-    "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/diyfr/quickdom.git"
+    "url": "git+https://github.com/diyfr/quickdom.git"
   },
   "keywords": [
     "dom",
@@ -30,12 +29,14 @@
   "homepage": "https://github.com/diyfr/quickdom#readme",
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "eslint": "^9.5.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.2",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "directories": {
+    "test": "tests"
   }
 }
