--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@diyfr/quickdom",
-  "version": "0.9.0",
-  "description": "A lightweight library for creating and manipulating DOM elements.",
+  "version": "0.9.1",
+  "description": "A lightweight library for creating and manipulating DOM elements in typescript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
