--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "target": "ES6",
       "module": "commonjs",
       "strict": true,
-      "outDir": "./dist",
+      "outDir": "./lib",
       "declaration": true,
       "declarationMap": true,
       "sourceMap": true
