--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,6 +32,9 @@ jobs:
           registry-url: 'https://registry.npmjs.org/'
       - run: npm install -g npm
       - run: npm ci
+      - run: npm whoami
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_SECRET}}
       - run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_SECRET}}
