--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "quickdom",
-  "version": "0.9.1",
+  "name": "@diyfr/quickdom",
+  "version": "0.9.2",
   "description": "A lightweight library for creating and manipulating DOM elements in typescript",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "files" :[
+    "lib/index.js",
+    "lib/index.d.ts"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "ts-node --files ./node_modules/jest/bin/jest",
