--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -62,7 +62,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           cache: npm
-          node-version-file: 20.x
+          node-version: 20.x
           registry-url: https://registry.npmjs.org/
 
       - name: Install Dependencies
