Update info package json

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "author": "diyfr",
   "license": "MIT",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "exports": {
     ".": {
