--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@diyfr/quickdom",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "description": "A lightweight library for creating and manipulating DOM elements in typescript",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -33,8 +33,8 @@
   },
   "exports": {
     ".": {
-      "types": "./build/index.d.ts",
-      "default": "./build/index.js"
+      "types": "./lib/index.d.ts",
+      "default": "./lib/index.js"
     },
     "./package.json": "./package.json"
   },
